# market-catalyst-calendar

./: LICENSE  README.md  pyproject.toml
docs/: RELEASE_NOTES.md  SCHEMA.md
examples/: README.md  agent_handoff.json  agent_handoff.md  brief.md  broker_matrix.json  broker_matrix.md  command_cookbook.md  compare.json  compare.md  dashboard.html  decision_log.json  decision_log.md  demo_records.csv  demo_records.json  demo_records_updated.json  doctor.json  doctor.md  doctor_patch.json  drilldown.json  drilldown.md  evidence_audit.json  evidence_audit.md  exposure.json  exposure.md  finalize_release.json  finalize_release.md  fixture_gallery.json  fixture_gallery.md  impact_artifact_receipt.json  impact_artifact_receipt.md  impact_brief.json  impact_brief.md  impact_capture_checklist.json  impact_capture_checklist.md  impact_compare.json  impact_compare.md  impact_dashboard.json  impact_dashboard.md  impact_receipt_compare.json  impact_receipt_compare.md  (+35 more)
market_catalyst_calendar/: __init__.py  agent_handoff.py  archive.py  changelog.py  cli.py  command_cookbook.py  compare.py  csv_io.py  dashboard.py  demo.py  demo_bundle.py  doctor.py  evidence.py  finalize_release.py  fixture_compare.py  fixture_gallery.py  ics.py  impact_artifact_receipt.py  impact_brief.py  impact_capture_checklist.py  impact_compare.py  impact_dashboard.py  impact_receipt_compare.py  io.py  merge.py  models.py  presets.py  quality_gate.py  quickstart_receipt.py  release_audit.py  render.py  scoring.py  smoke_matrix.py  static_site.py  taxonomy.py  tutorial.py  version_report.py  visual_evidence_receipt.py
scripts/: selfcheck.py
skills/agent/market-catalyst-calendar/: SKILL.md
tests/: test_cli.py
